# box-course

./: .gitignore  README.md  api-sample.py  database.py  main.py  mcp-sample.py  model.py  pyproject.toml  script1-api.ipynb  script2-mcp.ipynb  script3-a2a.ipynb  transcriptions.ipynb
